# Smartphone-Webserver-Template-Mongoose

./: .gitignore  README.md
resources/web_root/: index.html
src/: CMakeLists.txt  main.cpp  toolchain.cmake
src/libs/mongoose/: mongoose.c  mongoose.h
